test_results/security.txt
test
+- run test 307 pass, 16 fail (323 total)
error: 'security.policy.test.rate tracker records actions' failed:
       expected 3, found 0
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:118:17: 0x1017b3e47 in expectEqualInner__anon_54505 (test)
                       return error.TestExpectedEqual;
                       ^
       /Users/asil/.openclaw/workspace/nullclaw/src/security/policy.zig:649:5: 0x101bea247 in test.rate tracker records actions (test)
           try std.testing.expectEqual(@as(usize, 3), tracker.count());
           ^
error: 'security.policy.test.record action blocks over limit' failed:
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:615:14: 0x1016d237f in expect (test)
           if (!ok) return error.TestUnexpectedResult;
                    ^
       /Users/asil/.openclaw/workspace/nullclaw/src/security/policy.zig:676:5: 0x101beb9ef in test.record action blocks over limit (test)
           try std.testing.expect(!try p.recordAction()); // 4 — over limit
           ^
error: 'security.policy.test.is rate limited reflects count' failed:
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:615:14: 0x1016d237f in expect (test)
           if (!ok) return error.TestUnexpectedResult;
                    ^
       /Users/asil/.openclaw/workspace/nullclaw/src/security/policy.zig:691:5: 0x101bebe77 in test.is rate limited reflects count (test)
           try std.testing.expect(p.isRateLimited());
           ^
error: 'security.policy.test.record action returns false on exact boundary plus one' failed:
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:615:14: 0x1016d237f in expect (test)
           if (!ok) return error.TestUnexpectedResult;
                    ^
       /Users/asil/.openclaw/workspace/nullclaw/src/security/policy.zig:857:5: 0x101beeabf in test.record action returns false on exact boundary plus one (test)
           try std.testing.expect(!try p.recordAction()); // 2 blocked
           ^
error: 'security.tracker.test.rate tracker records and counts' failed:
       expected 3, found 0
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:118:17: 0x1017b3e47 in expectEqualInner__anon_54505 (test)
                       return error.TestExpectedEqual;
                       ^
       /Users/asil/.openclaw/workspace/nullclaw/src/security/tracker.zig:99:5: 0x101bf2c13 in test.rate tracker records and counts (test)
           try std.testing.expectEqual(@as(usize, 3), tracker.count());
           ^
error: 'security.tracker.test.rate tracker blocks when over limit' failed:
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:615:14: 0x1016d237f in expect (test)
           if (!ok) return error.TestUnexpectedResult;
                    ^
       /Users/asil/.openclaw/workspace/nullclaw/src/security/tracker.zig:109:5: 0x101bf326f in test.rate tracker blocks when over limit (test)
           try std.testing.expect(!try tracker.recordAction()); // 4 — over limit
           ^
error: 'security.tracker.test.rate tracker is limited at boundary' failed:
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:615:14: 0x1016d237f in expect (test)
           if (!ok) return error.TestUnexpectedResult;
                    ^
       /Users/asil/.openclaw/workspace/nullclaw/src/security/tracker.zig:119:5: 0x101bf363b in test.rate tracker is limited at boundary (test)
           try std.testing.expect(t
error: 'security.tracker.test.rate tracker reset clears actions' failed:
       racker.isLimited());
           ^
       expected 2, found 0
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:118:17: 0x1017b3e47 in expectEqualInner__anon_54505 (test)
                       return error.TestExpectedEqual;
                       ^
       /Users/asil/.openclaw/workspace/nullclaw/src/security/tracker.zig:134:5: 0x101bf3b53 in test.rate tracker reset clears actions (test)
           try std.t
error: 'security.tracker.test.rate tracker remaining decreases' failed:
       esting.expectEqual(@as(usize, 2), tracker.count());
           ^
       expected 4, found 5
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:118:17: 0x101727deb in expectEqualInner__anon_38370 (test)
                       return error.TestExpectedEqual;
                       ^
       /Users/asil/.openclaw/workspace/nullclaw/src/security/tracker.zig:154:5: 0x101bf4207 in test.rate tracker remaining decreases (test)
           try std.testing.expectEqual(@as(u32, 4), tracker.remaining());
           ^
error: 'security.tracker.test.rate tracker remaining at zero when full' failed:
       expected 0, found 2
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:118:17: 0x101727deb in expectEqualInner__anon_38370 (test)
                       return error.TestExpectedEqual;
                       ^
       /Users/asil/.openclaw/workspace/nullclaw/src/security/tracker.zig:164:5: 0x101bf4623 in test.rate tracker remaining at zero when full (test)
           try std.testing.expectEqual(@as(u32, 0), tracker.remaining());
           ^
error: 'security.tracker.test.rate tracker remaining stays at zero when over limit' failed:
       expected 0, found 1
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:118:17: 0x101727deb in expectEqualInner__anon_38370 (test)
                       return error.TestExpectedEqual;
                       ^
       /Users/asil/.openclaw/workspace/nullclaw/src/security/tracker.zig:172:5: 0x101bf48ab in test.rate tracker remaining stays at zero when over limit (test)
           try std.testing.expectEqual(@as(u32, 0), tracker.remaining());
           ^
error: 'security.tracker.test.rate tracker reset then reuse' failed:
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:615:14: 0x1016d237f in expect (test)
           if (!ok) return error.TestUnexpectedResult;
                    ^
       /Users/asil/.openclaw/workspace/nullclaw/src/security/tracker.zig:181:5: 0x101bf4c6f in test.rate tracker reset then reuse (test)
           try std.testing.expect(!try tracker.recordAction()); // over
           ^
error: 'security.tracker.test.rate tracker custom window' failed:
       expected 1, found 0
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:118:17: 0x1017b3e47 in expectEqualInner__anon_54505 (test)
                       return error.TestExpectedEqual;
                       ^
       /Users/asil/.openclaw/workspace/nullclaw/src/security/tracker.zig:193:5: 0x101bf513f in test.rate tracker custom window (test)
           try std.testing.expectEqual(@as(usize, 1), tracker.count());
           ^
error: 'security.tracker.test.rate tracker limit of one' failed:
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:615:14: 0x1016d237f in expect (test)
           if (!ok) return error.TestUnexpectedResult;
                    ^
       /Users/asil/.openclaw/workspace/nullclaw/src/security/tracker.zig:208:5: 0x101bf5dbb in test.rate tracker limit of one (test)
           try std.testing.expect(tracker.isLimited());
           ^
error: 'security.tracker.test.rate tracker many actions count correct' failed:
       expected 50, found 0
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:118:17: 0x1017b3e47 in expectEqualInner__anon_54505 (test)
                       return error.TestExpectedEqual;
                       ^
       /Users/asil/.openclaw/workspace/nullclaw/src/security/tracker.zig:218:5: 0x101bf6127 in test.rate tracker many actions count correct (test)
           try std.testing.expectEqual(@as(usize, 50), tracker.count());
           ^
error: 'security.secrets.test.secret store key file created on first encrypt' failed:
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/Io/Reader.zig:662:26: 0x101607703 in readSliceAll (test)
           if (n != buffer.len) return error.EndOfStream;
                                ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/Io/Reader.zig:742:5: 0x10186aef3 in readAlloc (test)
           try readSliceAll(r, dest);
           ^
       /Users/asil/.openclaw/workspace/nullclaw/src/security/secrets.zig:476:18: 0x101cf58ef in test.secret store key file created on first encrypt (test)
           const data = try reader.interface.readAlloc(std.testing.allocator, 128);
                        ^
failed command: ./.zig-cache/o/a52d2b948b365d884e1b091c3b62c016/test --cache-dir=./.zig-cache --seed=0xff8cfa68 --listen=-

Build Summary: 6/8 steps succeeded (1 failed); 307/323 tests passed (16 failed)
test transitive failure
+- run test 307 pass, 16 fail (323 total)
|  +- compile test Debug native success 18s MaxRSS:646M
|     +- WriteFile sqlite3.h cached
|     +- compile lib sqlite3 Debug native cached 71ms MaxRSS:30M
|     +- compile lib sqlite3 Debug native (reused)
|     +- options cached
+- run test success 225ms MaxRSS:2M
   +- compile test Debug native success 2s MaxRSS:260M
      +- WriteFile sqlite3.h (reused)
      +- compile lib sqlite3 Debug native (reused)
      +- compile lib sqlite3 Debug native (reused)
      +- WriteFile sqlite3.h (reused)
      +- compile lib sqlite3 Debug native (reused)
      +- compile lib sqlite3 Debug native (reused)
      +- options (reused)

error: the following build command failed with exit code 1:
.zig-cache/o/0105c9ee9be62dc964bdfac84a8967a7/build /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/zig /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib /Users/asil/.openclaw/workspace/nullclaw .zig-cache /Users/asil/.cache/zig --seed 0xff8cfa68 -Zb47dd7ae0ebc1323 test -Dtest-file=security --summary all
